# ascalia-demo

./: README.md  main.py  makefile  pyproject.toml
data/: GSRNL_00011.json  GSRNL_00012.json  GSRNL_00013.json  test.db
internal/: ascalia.py  ftp.py  order.py  schemas.py  sql.py
tests/: test_order_parser.py
